--- a/src/component/choices.css
+++ b/src/component/choices.css
@@ -12,9 +12,10 @@
 }
 
 
-.selectlevel{
+.selectlevel {
     margin-top: 3vw;
 }
+
 .selectlevel h4 {
     font-size: 1.3vw;
     color: #bf5c40;
@@ -203,29 +204,31 @@
     display: none;
 }
 
-.modal{
+.modal {
     display: none;
     position: fixed;
     z-index: 3;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0, 0, 0, 0.7); 
-    width: 100%; 
-    height: 100%; 
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
     padding: 4vw 3.5vw;
 }
+
 .close {
     color: #bf5c40;
     float: right;
     font-size: 3.5vw;
     cursor: pointer;
-  }
+}
+
 .planpopup {
     width: 100%;
-    background-color: white;  
+    background-color: white;
     padding: 1vw 1.5vw;
-    
+
 }
 
 .planpopup p {
@@ -245,7 +248,7 @@
     width: 9vw;
     padding-bottom: 2vw;
     margin-right: 4vw;
-    
+
 }
 
 .popuplogo h4 {
@@ -262,159 +265,170 @@
 .planimg img {
     width: 65vw;
     margin-top: 2vw;
-    
+
 }
 
-.borderdetail{
+.borderdetail {
     border-bottom: 0.1vw solid black;
     margin-bottom: 1vw;
-    
+
 }
 
 @media only screen and (max-width: 991px) {
-    .selectlevel{
+
+    .yourown {
+        font-size: 3.5vw;
+    }
+
+    .selectlevel {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .selectlevel h4{
-       padding: 1vw 20vw;
-       font-size: 2vw;
+
+    .selectlevel h4 {
+        padding: 1vw 20vw;
+        font-size: 2vw;
     }
+
     .selectlevel p {
         padding: 0.25vw 1.5vw 0vw 1.5vw;
         font-size: 1.5vw;
     }
-    .selectleveltext{
+
+    .selectleveltext {
         display: flex;
         justify-content: center;
     }
+
     .imglevel {
         display: flex;
         justify-content: center;
     }
-    .imglevel img{
-        width: 85vw;
+
+    .imglevel img {
+        width: 90vw;
         margin-left: 0;
     }
+
     #plus3-1 {
-        left: 76.3vw;
-        top: 92vw;
+        left: 78vw;
+        top: 96vw;
     }
-    
+
     #plus3-2 {
-        left: 20.3vw;
-        top: 92vw;
+        left: 18vw;
+        top: 96vw;
     }
-    
+
     #plus4-1 {
-        left: 79.5vw;
-        top: 92.5vw;
+        left: 81vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus4-2 {
-        left: 60.5vw;
-        top: 92.5vw;
+        left: 61vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus4-3 {
-        left: 33.6vw;
-        top: 92.5vw;
+        left: 33vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus4-4 {
-        left: 14vw;
-        top: 92.5vw;
+        left: 12vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus1-1 {
-        left: 79vw;
-        top: 92.5vw;
+        left: 81vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus1-2 {
-        left: 60vw;
-        top: 92.5vw;
+        left: 61vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus1-3 {
-        left: 33.6vw;
-        top: 92.5vw;
+        left: 33vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus1-4 {
-        left: 14vw;
-        top: 92.5vw;
+        left: 12vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus2-1 {
-        left: 77.5vw;
-        top: 92.5vw;
+        left: 78vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus2-2 {
         left: 56vw;
-        top: 92.5vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus2-3 {
-        left: 40.2vw;
-        top: 92.5vw;
+        left: 40vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus2-4 {
-        left: 20.2vw;
-        top: 92.5vw;
-        display: none;
-    }
-    
-    #plus15-1 {
-        left: 75vw;
-        top: 92.5vw;
-        display: none;
-    }
-    
-    #plus15-2 {
-        left: 55.5vw;
-        top: 92.5vw;
-        display: none;
-    }
-    
-    #plus15-3 {
-        left: 39vw;
-        top: 92.5vw;
-        display: none;
-    }
-    
-    #plus15-4 {
         left: 18vw;
-        top: 92.5vw;
+        top: 96vw;
         display: none;
     }
-    
+
+    #plus15-1 {
+        left: 77vw;
+        top: 96vw;
+        display: none;
+    }
+
+    #plus15-2 {
+        left: 56vw;
+        top: 96vw;
+        display: none;
+    }
+
+    #plus15-3 {
+        left: 38vw;
+        top: 96vw;
+        display: none;
+    }
+
+    #plus15-4 {
+        left: 16vw;
+        top: 96vw;
+        display: none;
+    }
+
     #plus25-1 {
-        left: 60vw;
-        top: 92.5vw;
+        left: 61vw;
+        top: 96vw;
         display: none;
     }
-    
+
     #plus25-2 {
-        left: 36.5vw;
-        top: 92.5vw;
+        left: 35vw;
+        top: 96vw;
         display: none;
     }
-    
+
 
 
 }
@@ -423,128 +437,139 @@
 
 @media only screen and (max-width: 575px) {
 
+    .selectlevel h4 {
+        padding: 1vw 25vw;
+        font-size: 3vw;
+    }
 
-#plus3-1 {
-    left: 76vw;
-    top: 103vw;
-}
+    .selectlevel p {
+        padding: 0.25vw 1.5vw 0vw 1.5vw;
+        font-size: 2vw;
+    }
 
-#plus3-2 {
-    left: 20.3vw;
-    top: 103vw;
-}
+    #plus3-1 {
+        left: 78vw;
+        top: 108vw;
+    }
 
-#plus4-1 {
-    left: 79.5vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus3-2 {
+        left: 18vw;
+        top: 108vw;
+    }
 
-#plus4-2 {
-    left: 60.5vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus4-1 {
+        left: 82vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus4-3 {
-    left: 34.6vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus4-2 {
+        left: 61vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus4-4 {
-    left: 14vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus4-3 {
+        left: 33vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus1-1 {
-    left: 79vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus4-4 {
+        left: 12vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus1-2 {
-    left: 60vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus1-1 {
+        left: 81vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus1-3 {
-    left: 34.6vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus1-2 {
+        left: 61vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus1-4 {
-    left: 15vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus1-3 {
+        left: 33vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus2-1 {
-    left: 77vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus1-4 {
+        left: 12vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus2-2 {
-    left: 56vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus2-1 {
+        left: 79vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus2-3 {
-    left: 40.2vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus2-2 {
+        left: 56vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus2-4 {
-    left: 20.2vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus2-3 {
+        left: 40vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus15-1 {
-    left: 75vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus2-4 {
+        left: 18vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus15-2 {
-    left: 55.5vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus15-1 {
+        left: 77vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus15-3 {
-    left: 39vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus15-2 {
+        left: 56vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus15-4 {
-    left: 18vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus15-3 {
+        left: 38vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus25-1 {
-    left: 60vw;
-    top: 101.5vw;
-    display: none;
-}
+    #plus15-4 {
+        left: 16vw;
+        top: 107vw;
+        display: none;
+    }
 
-#plus25-2 {
-    left: 36.5vw;
-    top: 101.5vw;
-    display: none;
-}
-.disclaimer3 {
-    font-size: 1vw;
-    padding: 0 5vw;
-   
-}
+    #plus25-1 {
+        left: 61vw;
+        top: 107vw;
+        display: none;
+    }
+
+    #plus25-2 {
+        left: 36vw;
+        top: 107vw;
+        display: none;
+    }
+
+    .disclaimer3 {
+        font-size: 1.5vw;
+        padding: 0 5vw;
+        margin-top: 4vw;
+
+    }
 
 }
