--- a/src/component/new.css
+++ b/src/component/new.css
@@ -6,13 +6,18 @@
 }
 
 .titlename{
-    font-size: 3vw;
+    font-size: 2.5vw;
     color: #bf5c40;
+    margin-bottom: 2vw;
 }
 .titledate{
     font-size: 1.2vw;
 }
-
+.titlesub{
+    font-size: 0.8vw;
+    width: 50%;
+    margin: 1vw auto;
+}
 .backtomain{
     display: flex;
     width: 60%;
@@ -29,3 +34,15 @@
     margin-right: 0.5vw;
     margin-top: -0.25vw;
 }
+.fulldetali{
+    font-size: 0.8vw;
+}
+.fulldetali p{
+    margin-bottom: 0.5vw;
+}
+
+.fulldetali img{
+    width: 50vw;
+    object-fit: contain;
+}
+ 
