--- a/src/component/newlist.css
+++ b/src/component/newlist.css
@@ -9,7 +9,6 @@
     margin-left: 0.5vw;
     margin-right: 0.5vw;
     min-height: 28vw;
-    
 }
 
 .image img {
@@ -74,27 +73,39 @@
 }
 .date{
     color: white;
-    font-size: 0.8vw;
+    font-size: 1vw;
     background-color: #bf5c40;
     width: 4vw;
-    height: 6vw;
+    height: 7vw;
     text-align:center;
-    padding-top: 1vw;
+    padding-top: 0.25vw;
+    padding-left: 0.25vw;
+    padding-right: 0.25vw;
+    
 }
+.date::first-line{
+   font-size: 1.75vw;
+}
+
 
 .newtitle{
     width: 100%;
-    min-height: 12vw;
+    height: 13vw;
     padding-top: 2vw;
     padding-left: 1vw;
     text-align: start;
     background-color: #f0f0f0;
+    color: black;
 }
 .newtitle h6{     
     font-size: 1vw;
+    padding-right: 1vw;
+    
 }
 .newtitle p{     
-    font-size: 1vw;
+    font-size: 0.8vw;
+    padding-right: 1vw;
+   
 }
 
 
@@ -124,21 +135,28 @@
     
     }
     .newtitle{     
-        min-height: 17vw;
+        height: 19vw;
         padding-top: 4vw;
         padding-left:2vw;
     }
     .newtitle h6{     
-        font-size: 2vw;
+        font-size: 1.7vw;
+        padding-right: 1.75vw;
     }
     .newtitle p{     
-        font-size: 1.6vw;
+        font-size: 1.3vw;
+        padding-right: 1.75vw;
     }
     .date{
-        font-size: 1vw;
+        font-size: 1.2vw;
         width: 5vw;
         height: 9vw;
-        padding-top: 1.5vw;
+        padding-top: 0.25vw;
+        padding-left: 0.25vw;
+        padding-right: 0.25vw;
+    }
+    .date::first-line{
+       font-size: 2.5vw;
     }
     .pagination {  
         font-size: 1.5vw;
@@ -172,21 +190,28 @@
     
     }
     .newtitle{     
-        min-height: 28vw;
+        height: 28vw;
         padding-top: 7vw;
         padding-left:3vw;
     }
     .newtitle h6{     
         font-size: 3vw;
+        padding-right: 4vw;
     }
     .newtitle p{     
         font-size: 2vw;
+        padding-right: 4vw;
     }
     .date{
-        font-size: 2vw;
+        font-size: 2.4vw;
         width: 9.5vw;
         height: 17vw;
-        padding-top: 1.5vw;
+        padding-top: 0.5vw;
+        padding-left: 0.75vw;
+        padding-right: 0.75vw;
+    }
+    .date::first-line{
+       font-size: 4vw;
     }
     .pagination {  
         font-size: 2.5vw;
