--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -2,7 +2,9 @@
    width: 100%;
    display: flex;
    justify-content: center;
-   background: linear-gradient(90deg, #842c1e 50%, #333132 50%);
+   background: rgb(132, 44, 30);
+   background: linear-gradient(90deg, rgba(132, 44, 30, 1) 0%, rgba(200, 107, 71, 1) 50%, 
+   rgba(51, 49, 50, 1) 50%, rgba(51, 49, 50, 1) 100%);
 }
 
 .craft {
@@ -99,13 +101,16 @@
    margin-top: 2vw;
    color: white;
 }
-.infoetc label p{
+
+.infoetc label p {
    display: none;
 }
+
 .infoetc ul {
    padding-inline-start: 0vw;
 }
-#etcblock{
+
+#etcblock {
    display: block;
 
 }
@@ -265,30 +270,35 @@
    .mfcapi {
       padding-left: 0vw;
    }
-   .infoetc{
+
+   .infoetc {
       margin-bottom: 1.5vw;
    }
+
    .infoetc label {
       border-bottom: 0.1vw solid white;
       padding-bottom: 0vw;
       display: flex;
       justify-content: space-between;
-      align-items:center;
+      align-items: center;
    }
-   .infoetc label p{
+
+   .infoetc label p {
       display: block;
       transform: rotate(180deg);
    }
+
    .infoetc h4 {
       font-size: 2.2vw;
    }
 
-   #etcblock{
+   #etcblock {
       display: none;
       margin-top: 1.5vw;
 
    }
-   #etcblock li{
+
+   #etcblock li {
       margin-top: 1vw;
    }
 
@@ -307,41 +317,43 @@
       border-top: 0;
       color: white;
    }
-   
+
    .follow a {
       padding: 0vw 2.5vw;
       text-decoration: none;
       color: white;
    }
-   
+
    .follow a:hover {
       color: white;
    }
-   
+
    .folleft {
       border-right: 0.1vw solid white;
    }
-   
+
    .social {
       display: flex;
       flex-direction: column;
       margin-top: 3vw;
       margin-bottom: 5vw;
    }
-   
+
    .social a {
       padding: 0vw 0.5vw;
-   
+
    }
+
    .social p {
-     text-align: center;
+      text-align: center;
    }
+
    .social img {
       width: 6vw;
       height: 5vw;
       padding: 0vw 0.5vw;
    }
-   
+
    .descrip {
       padding: 5vw 3vw;
    }
@@ -351,6 +363,7 @@
       font-size: 1.9vw;
       margin-bottom: 0vw;
    }
+
    .contact {
       padding: 2.5vw 2vw;
    }
@@ -377,6 +390,7 @@
       width: 15vw;
       margin-bottom: 2vw;
    }
+
    .address p {
 
       font-size: 1.8vw;
