--- a/src/component/content.css
+++ b/src/component/content.css
@@ -15,8 +15,6 @@
     justify-content: space-between; */
     margin-bottom: 12vw;
     padding-top: 8vw;
-
-
 }
 
 .imgcon img {
@@ -159,11 +157,15 @@
 
 @media only screen and (max-width: 992px) {
 
-    .ban1 {
+    /* .ban1 {
         position: absolute;
         right: 0vw;
         left: 0vw;
         top: 70vw;
+        margin-left: 0vw;
+    } */
+    .ban1{
+        margin-top: 13vw;
         margin-left: 0vw;
     }
 
@@ -178,7 +180,7 @@
     }
 
     .textcon {
-        margin-top: 64vw;
+        margin-top: 1vw;
         margin-left: 5vw;
     }
 
@@ -188,7 +190,7 @@
     }
 
     .bgleft {
-        top: 20vw;
+        top: 10vw;
         left: -5vw;
 
     }
