--- a/src/component/newlist.css
+++ b/src/component/newlist.css
@@ -8,23 +8,24 @@
     margin-bottom: 3vw;
     margin-left: 0.5vw;
     margin-right: 0.5vw;
-    
+    border-right: 0.5vw solid;
+    border-image: linear-gradient(to bottom, #bf5c4040 20%, #f0f0f0 20%) 20;
 }
 
 .image img {
     width: 100%;
-    height: 16vw;
-    border-right: 0.5vw solid #f0f0f0;
+    height: 16vw; 
+    /* border-right: 0.5vw solid #f0f0f0; */
     border-left: 0.5vw solid #bf5c4040;
-    border-top: 0.5vw solid #bf5c4040;
-
-    
+    border-top: 0.5vw solid #bf5c4040;   
 }
+.image:hover{
+    border-image: linear-gradient(to bottom, #bf5c40 20%, #f0f0f0 20%) 20;
 
+}
 .image img:hover {
     border-left: 0.5vw solid #bf5c40;
     border-top: 0.5vw solid #bf5c40;
-    transition: 500ms;
 
 }
 
