--- a/src/component/newlist.css
+++ b/src/component/newlist.css
@@ -122,11 +122,12 @@
     
     .image {
         margin-bottom: 5vw;
+        border-right: 1vw solid;
     }
     .image img {
         width: 100%;
         height: 28vw;
-        border-right: 1vw solid #f0f0f0;
+        /* border-right: 1vw solid #f0f0f0; */
         border-left: 1vw solid #bf5c4040;
         border-top: 1vw solid #bf5c4040;
         
@@ -135,7 +136,6 @@
     .image img:hover {
         border-left: 1vw solid #bf5c40;
         border-top: 1vw solid #bf5c40;
-        transition: 500ms;
     
     }
     .newtitle{     
@@ -176,11 +176,12 @@
     
     .image {
         margin-bottom: 5vw;
+        border-right: 1.5vw solid;
     }
     .image img {
         width: 100%;
         height: 50vw;
-        border-right: 1.5vw solid #f0f0f0;
+        /* border-right: 1.5vw solid #f0f0f0; */
         border-left: 1.5vw solid #bf5c4040;
         border-top: 1.5vw solid #bf5c4040;
         
@@ -189,8 +190,7 @@
     .image img:hover {
         border-left: 1.5vw solid #bf5c40;
         border-top: 1.5vw solid #bf5c40;
-        transition: 500ms;
-    
+      
     }
     .newtitle{     
         height: 35vw;
