--- a/src/component/gallaryart.css
+++ b/src/component/gallaryart.css
@@ -211,31 +211,39 @@
         /* width: 60%; */
     }
     .facade1{
-        margin-top: 17vw;
+        margin-top: 20vw;
         width: 100%;
+        height: 50vw;
     }
     .facade2{
         width: 100%;
+        height: 50vw;
         margin-left: 0vw; 
+
+    }
+    .rgallary{
+        position: relative;
+        margin-bottom: 10vw;
     }
     .rgallary p{ 
         margin-left: 0vw;
         font-size: 4vw;
         padding-top: 15vw;
+        line-height: 4vw;
     }
     #plusitem1{
-        margin-top: 15vw;
-        margin-left: 73vw;
+        margin-top: 16vw;
+        margin-left: 2vw;
     }
     .facade3{
         width: 100%;
-        height: auto;
+        height: 50vw;
         margin-left: 0vw;
         margin-top: 0vw;    
     }
     .facade{
         position: absolute;
-        top: 30vw;
+        top: -127vw;
     }
     
     .rgallary2{
