--- a/src/component/gallaryart.css
+++ b/src/component/gallaryart.css
@@ -239,7 +239,8 @@
         width: 100%;
         height: 50vw;
         margin-left: 0vw;
-        margin-top: 0vw;    
+        margin-top: 0vw;   
+        object-position: center 90%; 
     }
     .facade{
         position: absolute;
@@ -325,5 +326,11 @@
         margin-top: 15vw;
         margin-left: 74vw;
     }
-
+    .nextimg{
+        right: 3vw;
+    }
+    .close {
+        right: 3vw;
+        font-size: 7vw;
+      }
 }
