--- a/src/component/gallaryart.css
+++ b/src/component/gallaryart.css
@@ -58,7 +58,7 @@
 }
 .rgallary2 p{
     color: #bf5c40;
-    margin-left: 2vw;
+    margin-left: 0.5vw;
     font-size: 2vw;
     border-right: 0.1vw solid #bf5c40;
     padding-top: 10vw;
@@ -69,7 +69,9 @@
 .rgallary3 p{
     margin-left: 1.5vw;
 }
-
+.outdoor1{
+    height: 32vw;
+}
 .outdoor2{
     width: 35vw;
     margin-top: 1.5vw;
@@ -105,9 +107,13 @@
     transition: 1000ms;
     filter: grayscale(0%);
 }
+.moreitemr{
+    display: flex;
 
+}
 .moreitem{
     display: flex;
+    justify-content: flex-end;
 }
 .plusitem1{
     color: #bf5c40;
@@ -116,8 +122,8 @@
 }
 #plusitem2{
     color: #bf5c40;
-    margin-top: 11vw;
-    margin-left: 9.5vw;
+    margin-top: 10vw;
+    /* margin-left: 0.5vw; */
 }
 
 #plusitem3{
@@ -211,7 +217,7 @@
         /* width: 60%; */
     }
     .facade1{
-        margin-top: 20vw;
+        margin-top: 26vw;
         width: 100%;
         height: 50vw;
     }
@@ -231,7 +237,7 @@
         padding-top: 15vw;
         line-height: 4vw;
     }
-    #plusitem1{
+    .plusitem1{
         margin-top: 16vw;
         margin-left: 2vw;
     }
@@ -247,24 +253,32 @@
         top: -127vw;
     }
     
+    .moreitem{
+        display: flex;
+        justify-content: flex-end;
+    }
     .rgallary2{
         margin-left: 0vw;
+        
     }
     .rgallary2 p{ 
-        margin-left: 70vw;
+        margin-left: 2vw;
         font-size: 4vw;
         padding-top: 15vw;
         line-height: 4vw;
+        margin-bottom: 4vw;
     }
     #plusitem2{
-       
-        margin-top: 20vw;
-        margin-left: 0vw;
+        margin-top: 16vw;
+        /* margin-left: 48vw; */
+    }
+    .lgallary2{
+        position: relative;
     }
     .outdoor3{
         width: 100%;
-        height: auto;
-        margin-top: 53vw;
+        height: 54vw;
+        margin-top: 50vw;
     }
     .outdoor2{
         width: 100%;
@@ -272,8 +286,8 @@
     }
     .outdoor1{
         position: absolute;
-        top: 251vw;
-        width: 96%;
+        top: -107vw;
+        width: 100%;
         margin-top: 1.5vw;
     }
     .indoort{
