--- a/src/component/facilitie.css
+++ b/src/component/facilitie.css
@@ -2,6 +2,7 @@
     text-align: center;
     color: #bf5c40;
     font-size: 2.5vw;
+    font-family: 'Montserrat-Regular';
 }
 
 .disclaimer2 {
@@ -10,6 +11,7 @@
     padding: 0vw 18.5vw;
     margin-bottom: 5vw;
     margin-top: 1vw;
+    font-family: 'minion_proregular';
 }
 
 .levelselect {
@@ -22,6 +24,7 @@
     margin-left: 2vw;
     cursor: pointer;
     font-size: 1.2vw;
+    font-family: 'minion_proregular';
 }
 
 #lv1 {
@@ -58,6 +61,7 @@
     font-size: 1.2vw;
     margin-left: 2vw;
     margin-bottom: 1.5vw;
+    font-family: 'Montserrat-Medium';
 }
 
 .rowout{
@@ -69,6 +73,7 @@
 }
 .colout a{  
     font-size: 0.9vw;
+    font-family: 'minion_proregular';
 }
 
 .rowlv3 {
@@ -86,18 +91,21 @@
     height: 1.1vw;
     font-weight: bold;
     font-size: 0.6vw;
+    font-family: 'Montserrat-Light';
     
 }
 .faciin span{
+    padding-top: 0.15vw;
     border-radius: 50%;
     background-color: black;
     color: white;
     display: inline-block;
     text-align: center;
     width: 1.1vw;
-    height: 1vw;
+    height: 1.2vw;
     font-weight: bold;
     font-size: 0.6vw;
+    font-family: 'Montserrat-Light';
 }
 
 .faciout , .faciin{
