--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -18,6 +18,7 @@
    text-align: center;
    padding-top: 4vw;
    font-size: 1.5vw;
+   font-family: 'Montserrat-Regular';
 }
 
 .teamicon {
@@ -35,6 +36,7 @@
 
 .teamicon p {
    font-size: 1.3vw;
+   font-family: 'Montserrat-Light';
 }
 
 .logo1 {
@@ -64,6 +66,7 @@
    text-decoration: none;
    color: white;
    font-size: 1.3vw;
+   font-family: 'Montserrat-Regular';
 }
 
 .numregis a {
@@ -75,7 +78,8 @@
    font-size: 1.7vw;
    border-top: 0.1vw solid #bf5c40;
    border-bottom: 0.1vw solid #bf5c40;
-   padding: 0.5vw 1vw;
+   padding: 0.5vw 2vw;
+   font-family: 'minion_proregular';
 }
 
 .craft a:hover {
@@ -123,16 +127,18 @@
 }
 
 .infoetc h4 {
-   font-size: 0.9vw;
+   font-size: 0.8vw;
    margin-bottom: 1.2vw;
+   font-family: 'Montserrat-Regular';
 }
 
 .infoetc a {
-   font-size: 0.75vw;
+   font-size: 0.7vw;
    margin-bottom: 0.75vw;
    width: fit-content;
    text-decoration: none;
    color: white;
+   font-family: 'Montserrat-Light';
 }
 .infoetc a {
 	display: block;
@@ -182,7 +188,8 @@
    padding: 1vw 1vw;
    border-top: 0.1vw solid white;
    color: white;
-   font-size: 0.75vw;
+   font-size: 0.7vw;
+   font-family: 'Montserrat-Light';
 }
 
 .follow a {
@@ -228,18 +235,22 @@
    max-width: 1280px;
    margin: 0 auto;
    text-align: center;
-   font-size: 0.8vw;
+   font-size: 0.7vw;
    line-height: 1.2vw;
+   font-family: 'Montserrat-Light';
 }
 
 .contact {
-   padding: 2.5vw 10vw;
+   max-width: 1280px;
+   margin: 2vw auto;
+   /* padding: 2.5vw 10vw; */
 }
 
 .copyright {
    display: flex;
    flex-direction: column;
    font-size: 0.7vw;
+   font-family: 'Montserrat-Light';
 }
 
 .copyright img {
@@ -264,6 +275,7 @@
    padding-top: 2vw;
    font-size: 0.7vw;
    text-align: end;
+   font-family: 'Montserrat-Light';
 }
 
 
@@ -319,34 +331,73 @@
    .moreetc {
       margin: 0 1vw;
    }
+   
    .follow {
-      margin: 1.5vw 1.5vw 0vw 1.5vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 1vw 5vw 0vw 5vw;
       padding: 1vw 0vw;
-      border-top: 0.1vw solid white;
-      color: white;
       font-size: 1.1vw;
+      color: white;
+      border-top: 0.1vw solid white;
    }
+
    .follow a {
-      padding: 0vw 0.75vw;
+      padding: 0vw 2.5vw;
    }
+
+   .social {
+      display: flex;
+      flex-direction: column;
+      margin-top: 3vw;
+      margin-bottom: 3vw;
+   }
+
+   .social a {
+      padding: 0vw 0.5vw;
+
+   }
+
+   .social p {
+      text-align: center;
+   }
+
    .social img {
-      width: 2.8vw;
-      height: 2.4vw;
-      padding: 0vw 0vw;
+      width: 3.5vw;
+      height: 2.8vw;
+      padding: 0vw 0.2vw;
    }
+
    .descrip {
       background-color: #e6e6e7;
-      padding: 2vw 3vw;
+      padding: 2vw 5vw;
    }
    
    .descrip p {
       max-width: 1280px;
       margin: 0 auto;
       text-align: center;
-      font-size: 1.1vw;
-      line-height: 1.4vw;
+      font-size: 1.2vw;
+      line-height: 1.7vw;
+   }
+   .contact {
+      margin: 3vw 5vw;  
+   }
+   .copyright {
+      font-size: 1vw;
    }
    
+   .copyright img {
+      width: 12vw;
+      margin-bottom: 1vw;
+   }
+
+   .address p {
+      padding-top: 2vw;
+      font-size: 1vw;
+      text-align: end;
+   }
    
 }
 
@@ -355,45 +406,39 @@
       margin-top: 22vw;
    }
    .craft {
-      margin: 2vw;
+      margin: 3vw;
    }
-
    .craft p {
-      padding-top: 4vw;
-      font-size: 3.5vw;
+      padding-top: 10vw;
+      font-size: 4vw;
    }
-
    .teamicon {
-      padding: 0vw 15vw;
+      padding: 0vw 12vw;
+      margin-bottom: 10vw;
    }
-
    .teamicon p {
-      font-size: 1.5vw;
-   }
-
+      font-size: 2vw;
+   } 
    .logo1 {
-      width: 18vw;
+      width: 20vw;
    }
-
    .logo2 {
-      width: 12vw;
+      width: 11vw;
    }
-
    .craft button {
+      width: 27vw;
+      height: 8vw;
       font-size: 2.5vw;
-      margin-bottom: 2vw;
+      font-weight: bold;
    }
-
+   
    .numregis a {
-      font-size: 3vw;
-      padding: 1vw 1.5vw;
-      margin-bottom: 4vw;
-   }
-
-
-   .moreetc {
-      padding: 0vw 3vw;
-      margin-top: 5vw;
+      margin-top: 3vw;
+      margin-bottom: 5vw;
+      font-size: 4vw;
+      border-top: 0.15vw solid #bf5c40;
+      border-bottom: 0.15vw solid #bf5c40;
+      padding: 1.5vw 1.5vw;
    }
 
    .mfcapi {
@@ -442,23 +487,13 @@
       align-items: center;
       margin: 1vw 5vw 0vw 5vw;
       padding: 1vw 0vw;
-      font-size: 2vw;
+      font-size: 2.2vw;
       border-top: 0;
       color: white;
    }
 
    .follow a {
       padding: 0vw 2.5vw;
-      text-decoration: none;
-      color: white;
-   }
-
-   .follow a:hover {
-      color: white;
-   }
-
-   .folleft {
-      border-right: 0.1vw solid white;
    }
 
    .social {
@@ -484,12 +519,12 @@
    }
 
    .descrip {
-      padding: 5vw 3vw;
+      padding: 5vw 5vw;
    }
 
    .descrip p {
-      line-height: 2.5vw;
-      font-size: 1.9vw;
+      line-height: 3vw;
+      font-size: 2.2vw;
       margin-bottom: 0vw;
    }
 
@@ -497,9 +532,6 @@
       padding: 2.5vw 2vw;
    }
 
-   .contact p {
-      font-size: 1.2vw;
-   }
 
    .copyright {
       margin-top: 2vw;
@@ -508,21 +540,21 @@
    }
 
    .copyright p {
-      font-size: 1.8vw;
+      font-size: 2vw;
    }
 
    .copyright a {
-      font-size: 1.8vw;
+      font-size: 2vw;
    }
 
    .copyright img {
-      width: 15vw;
+      width: 20vw;
       margin-bottom: 2vw;
    }
 
    .address p {
 
-      font-size: 1.8vw;
+      font-size: 2vw;
       text-align: center;
       margin-bottom: 10vw;
 
