--- a/src/component/gallaryart.css
+++ b/src/component/gallaryart.css
@@ -2,6 +2,7 @@
     color: #bf5c40;
     font-size: 2vw;
     margin-left: 2vw;
+    font-family: 'Montserrat-Regular';
 }
 .headgal2{
     margin-top: 0.5vw;
@@ -51,6 +52,7 @@
     padding-left: 1vw;
     padding-bottom: 1vw;
     line-height: 2vw;
+    font-family: 'Montserrat-Light';
 }
 
 .rgallary2{
@@ -65,6 +67,7 @@
     padding-bottom: 1vw;
     padding-right: 1vw;
     line-height: 2vw;
+    font-family: 'Montserrat-Light';
 }
 .rgallary3 p{
     margin-left: 1.5vw;
