--- a/src/component/menu.css
+++ b/src/component/menu.css
@@ -103,6 +103,7 @@
     font-size: 1.5vw;
     margin-bottom: 1.5vw;
     text-decoration: none;
+    font-family: 'minion_proregular';
 }
 .menuitem a:hover{
     color: white;
