--- a/src/component/newlist.css
+++ b/src/component/newlist.css
@@ -105,11 +105,13 @@
 .newtitle h6{     
     font-size: 1vw;
     padding-right: 1vw;
+    font-family: 'Montserrat-Medium';
     
 }
 .newtitle p{     
     font-size: 0.7vw;
     padding-right: 1vw;
+    font-family: 'minion_proregular';
    
 }
 
