--- a/src/component/project.css
+++ b/src/component/project.css
@@ -19,22 +19,28 @@
     text-align: center;
     font-size: 2vw;
     color: #bf5c40;
+    font-family: 'Montserrat-Regular';
 }
 .project{
     margin-bottom: 5vw;
     margin-top: 2vw;
+    margin-left: 5vw;
+    margin-right: 5vw;
 }
 .nameproject{
     margin-top: 1vw;
     margin-bottom: 1vw;
     border-bottom: 0.1vw solid #cfcfcf;
-    
 }
+
 .namedetail p{
     color: #bf5c40;
     font-size: 1.2vw;
-    margin-left: 0.5vw;
+    margin-left: 0.5vw; 
+    font-family: 'minion_proregular';
 }
 .detailproject{
     font-size: 1.2vw;
+    white-space: pre-line;
+    font-family: 'minion_proregular';
 }
