--- a/src/component/newlist.css
+++ b/src/component/newlist.css
@@ -8,24 +8,24 @@
     margin-bottom: 3vw;
     margin-left: 0.5vw;
     margin-right: 0.5vw;
-    border-right: 0.5vw solid;
-    border-image: linear-gradient(to bottom, #bf5c4040 20%, #f0f0f0 20%) 20;
+    border-right: 0.7vw solid;
+    border-image: linear-gradient(to bottom, #bf5c4040 20%, #f0f0f0 20%) 40;
 }
 
 .image img {
     width: 100%;
     height: 16vw; 
     /* border-right: 0.5vw solid #f0f0f0; */
-    border-left: 0.5vw solid #bf5c4040;
-    border-top: 0.5vw solid #bf5c4040;   
+    border-left: 0.7vw solid #bf5c4040;
+    border-top: 0.7vw solid #bf5c4040;   
 }
 .image:hover{
-    border-image: linear-gradient(to bottom, #bf5c40 20%, #f0f0f0 20%) 20;
+    border-image: linear-gradient(to bottom, #bf5c40 20%, #f0f0f0 20%) 40;
 
 }
 .image img:hover {
-    border-left: 0.5vw solid #bf5c40;
-    border-top: 0.5vw solid #bf5c40;
+    border-left: 0.7vw solid #bf5c40;
+    border-top: 0.7vw solid #bf5c40;
 }
 
 .pagination {
@@ -38,18 +38,21 @@
 }
 
 .pagination .page-num {
-    padding: 0.25vw 0.75vw;
+    padding: 0.05vw 0.5vw;
     cursor: pointer;
     font-weight: 400;
     text-decoration: none;
-    color: black;
-    margin-left: 0.25vw;
-    margin-right: 0.25vw;
+    color: white;
+    margin-left: 0.3vw;
+    margin-right: 0.3vw;
+    border-radius: 50%;
+    background-color: #333132;
 }
 
+
+
 .pagination .page-num:hover {
-    background-color: #bf5c40;
-    border-radius: 50%;
+    background-color: #333132cc;
     color: #fff;
 
 }
@@ -63,7 +66,7 @@
 }
 
 .pagination .page-num-chg:hover {
-    color: #bf5c40;
+    color: #333132cc;
 }
 
 
@@ -86,6 +89,7 @@
     padding-top: 0.25vw;
     padding-left: 0.25vw;
     padding-right: 0.25vw;
+    font-family: 'minion_proregular';
     
 }
 .date::first-line{
@@ -94,6 +98,7 @@
 
 
 .newtitle{
+    position: relative;
     width: 100%;
     height: 15vw;
     padding-top: 2vw;
@@ -114,6 +119,14 @@
     font-family: 'minion_proregular';
    
 }
+.linkto{
+    color: #bf5c40;
+    position: absolute;
+    top: 11.5vw;
+    right: 0vw;
+    font-size: 2vw;
+}
+
 
 
 @media only screen and (max-width: 992px) {
@@ -170,7 +183,11 @@
     .pagination .page-num {
         padding: 0.25vw 0.9vw;
     }
-
+    .linkto{
+        top: 18vw;
+        right: 0vw;
+        font-size: 3vw;
+    }
 }
 
 @media only screen and (max-width: 576px) {
@@ -227,6 +244,10 @@
     .pagination .page-num {
         padding: 0.5vw 1.5vw;
        
+    }
+    .linkto{
+        top: 27vw;
+        font-size: 5vw;
     }
 
 }
